[NM-425] parent onboarding changes

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -209,6 +209,10 @@ header {
   flex-direction: column !important;
 }
 
+.nabi-flex-wrap {
+  flex-wrap: wrap !important;
+}
+
 .nabi-display-flex {
   display: flex !important;
 }
