--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -10,13 +10,11 @@
 }
 
 body {
-	background: #f0f3f6;
+	background: #ececec;
 	margin: 0px;
 	font-family: 'Montserrat', sans-serif;
-	color: #717a8a !important;
-	background-image: url('https://nabimusic.s3.us-east-2.amazonaws.com/assets/images/musical-background.jpg') !important;
-  background-size: contain;
-  background-repeat: repeat;
+	color: #000000 !important;
+	font-size: 14px
 }
 
 li {
@@ -668,7 +666,7 @@ li.nabi-list-style-position-inside {
 }
 
 .nabi-logo-anchor img {
-	width: 55px;
+	width: 60px;
 	margin: 0 auto !important;
 	text-align: center !important;
 	margin-top: 10px !important
@@ -1042,7 +1040,7 @@ li.nabi-list-style-position-inside {
 	}
 
 	.nabi-logo-anchor img {
-		width: 55px;
+		width: 60px;
 	}
 
 	#nabi-logo-text {
