--- a/assets/css/overrides.css
+++ b/assets/css/overrides.css
@@ -58,10 +58,10 @@
   height: 30px;
   padding: 0px !important;
   overflow: visible;
-  font-size: 1.5rem;
+  font-size: 14px;
   text-align: center;
   transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-  border-radius: 3px;
+  border-radius: 4px;
 }
 
 .MuiIconButton-colorPrimary {
