--- a/assets/scss/Testimonials.scss
+++ b/assets/scss/Testimonials.scss
@@ -30,7 +30,7 @@
   border-radius: 50%;
   width: 147px;
   height: 147px;
-  border: 7px solid #fb7f6b;
+  border: 5px solid #fff;
   text-align: center;
 }
 
