change class to force update

--- a/assets/scss/Home.scss
+++ b/assets/scss/Home.scss
@@ -2,7 +2,7 @@
     width: 90px;
 }
 
-#banner {
+#banner-new {
 	height: 300px !important;
 	width: 100%;
 	background-image: url('https://nabimusic.s3.us-east-2.amazonaws.com/assets/images/music-lessons-for-kids-banner-lighter.jpg') !important;
