--- a/assets/scss/Header.scss
+++ b/assets/scss/Header.scss
@@ -1,12 +1,7 @@
-.nabi-header-menu {
-	position: absolute !important;
-  top: 6% !important;
-  padding-left: 12px;
+#logo {
+  width: 90px;
 }
 
-@media only screen and (min-width: 960px) {
-  .nabi-header-menu {
-    top: 45% !important;
-    padding-left: 0px;
-  }
+.menu-container {
+  padding-top: 24px !important;
 }
