--- a/assets/css/overrides.css
+++ b/assets/css/overrides.css
@@ -22,7 +22,7 @@
   height: 30px;
   width: 30px;
   padding: 0px;
-  background: #ffffff !important
+  background: transparent !important
 }
 
 .MuiTableCell-root {
