--- a/assets/scss/ChildForm.scss
+++ b/assets/scss/ChildForm.scss
@@ -1,5 +1,6 @@
 .level-chips {
-  padding: 26px 0px !important;
+  height: 40px !important;
+  padding: 0px 2px !important;
 }
 
 .instrument-select select {
