--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -10,7 +10,7 @@
 }
 
 body {
-	background: #ececec;
+	background: #E5E5E5;
 	margin: 0px;
 	font-family: 'Montserrat', sans-serif;
 	color: #000000 !important;
@@ -37,7 +37,7 @@ mark {
 
 /*BACKGROUND COLOR*/
 .nabi-background-color {
-	background-color: #ececec;
+	background-color: #E5E5E5;
 }
 
 .nabi-background-white {
@@ -829,7 +829,7 @@ li.nabi-list-style-position-inside {
 	border: none;
 	color: #000000;
 	padding: 11px 0px;
-	font-size: 14px;
+	font-size: 15px;
 }
 
 .react-datepicker-popper {
