--- a/assets/css/overrides.css
+++ b/assets/css/overrides.css
@@ -40,6 +40,15 @@
   color: #ffffff;
 }
 
+.MuiButtonGroup-grouped {
+  padding: 0px !important;
+  color: #717a8a !important;
+}
+
+.MuiButtonGroup-groupedTextHorizontal:not(:last-child) {
+  border-right: 1px solid #717a8a !important;
+}
+
 .MuiPaper-root.MuiPaper-elevation1.MuiExpansionPanel-root.MuiExpansionPanel-rounded.MuiPaper-rounded {
   box-shadow: none;
 }
@@ -63,7 +72,7 @@
   height: 30px;
   padding: 0px !important;
   overflow: visible;
-  font-size: 14px;
+  font-size: 15px;
   text-align: center;
   transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
   border-radius: 4px;
