--- a/assets/scss/Home.scss
+++ b/assets/scss/Home.scss
@@ -37,8 +37,8 @@
 }
 
 .stats-wrapper {
-    border-top: 1px solid #ececec;
-    border-bottom: 1px solid #ececec;
+    border-top: 1px solid #E5E5E5;
+    border-bottom: 1px solid #E5E5E5;
     padding-bottom: 16px;
     margin-top: 10px;
 }
