--- a/src/components/FloatingChat/App.css
+++ b/src/components/FloatingChat/App.css
@@ -31,7 +31,7 @@
   flex-direction: column;
   align-items: flex-end;
   justify-content: flex-end;
-  width: 60px;
+  width: 70px;
   height: 60px;
 }
 
@@ -46,11 +46,13 @@
   justify-content: flex-start;
   width: 650px;
   height: 450px;
+
+  /*overflow-x: scroll;*/
 }
 
 .customer-wrapper--open .str-chat {
   height: 100%;
-  width: 340px;
+  width: 325px;
   display: flex;
   align-items: flex-start;
   box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.3), inset 0 1px 0 0 rgba(255, 255, 255, 0.18);
@@ -63,12 +65,13 @@
 
 .customer-wrapper .str-chat__container {
   border-radius: 0 32px 32px 0;
+  max-width: 325px;
+  overflow-x: scroll;
 }
 
 .customer-wrapper .str-chat__list {
   height: 400px;
-  width: 340px;
-
+  width: 325px;
 }
 
 .toggle-button {
@@ -89,11 +92,13 @@
   opacity: 1;
 }
 
+/*
 @media screen and (max-width: 414px) {
   .str-chat-channel .str-chat__container {
     width: 360px;
   }
 }
+*/
 
 .str-chat__date-separator {
   padding: 0;
@@ -176,6 +181,30 @@
 
 .str-chat__typing-indicator__dot {
   background: #858688;
+}
+
+.str-chat__message-attachment{
+  max-width: 215px;
+}
+.str-chat__message-team{
+  padding: 5px 0px;
+}
+.str-chat__message-team-status{
+  left: 90%;
+}
+.customer-wrapper .commerce.str-chat .str-chat__list .str-chat__reverse-infinite-scroll{
+  padding-top: 20px;
+}
+.str-chat__ul,.str-chat__thread-list{
+  padding-right: 5px;
+}
+
+@media only screen and (max-width: 650px) {
+  .customer-wrapper{
+    max-width: 100%;
+    overflow-x: scroll;
+    right: 0px !important;
+  }
 }
 
 @media screen and (max-width: 960px) {
